update porthofolio description

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/portfolio/p2.png" alt="sweeter" width="w-full">
-                        <h3 class="font-semibold text-xl text-dark mb-3 mt-5 pl-3 dark:text-white">Platform sosial media:
+                        <h3 class="font-semibold text-xl text-dark mb-3 mt-5 pl-3 dark:text-white">Platform mini sosial media:
                             Sweeter</h3>
                         <p class="font-medium text-base text-secondary p-3">"Sweeter" dirancang untuk memungkinkan
                             pengguna berbagi 'momen manis' mereka. Dengan menggunakan HTML, CSS, dan framework Bulma
