--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h1 class="text-base font-semibold text-primary md:text-xl ">Hello everyone 😉, I'm <span
                             class="block font-bold text-dark text-2xl mt-1 lg:text-4xl dark:text-white">Al Hajjri Prima Saputra</span>
                     </h1>
-                    <h2 class="font-medium text-secondary text-lg mb-5 dark:text-white">Web Developer</h2>
+                    <h2 class="font-medium text-secondary text-lg mb-5 dark:text-white">Mobile Developer</h2>
                     <p class="font-medium text-secondary mb-8 leading-relaxed">Turn Your Dream Website into Reality, Let's Start Together <br> 
                         <span class="font-bold text-dark dark:text-white">Let's Go</span>
                     </p>                    
